feat(sync): enhance sync management and UI updates
Updated SVG icons, added BooleanToVisibilityInverterConverter, and refactored code to focus on syncs instead of drives. Introduced SyncActivity class and SyncActivityTable for better tracking and display of sync activities. Updated view models and XAML bindings accordingly.

--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/SyncStatusBar.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/SyncStatusBar.xaml
@@ -78,13 +78,13 @@
             x:Name="StartPauseButton" 
             Click="StartPauseButton_Click" 
             ContentTemplateSelector="{StaticResource StartPauseButtonTemplateSelector}" 
-            Content="{x:Bind ViewModel.SelectedDrive.SyncStatus, Mode=OneWay}" 
-            IsEnabled="{x:Bind ViewModel.SelectedDrive.SyncStatus, Converter={StaticResource SyncStatusToButtonEnabledConverter}, Mode=OneWay}"
+            Content="{x:Bind ViewModel.SelectedSync.SyncStatus, Mode=OneWay}" 
+            IsEnabled="{x:Bind ViewModel.SelectedSync.SyncStatus, Converter={StaticResource SyncStatusToButtonEnabledConverter}, Mode=OneWay}"
             Width="32" Height="32" 
             Margin="0,0,10,0" Padding="8"
             />
 
         <!-- Text block indicating sync status -->
-        <ContentControl ContentTemplateSelector="{StaticResource TextStatusTemplateSelector}" Content="{x:Bind ViewModel.SelectedDrive.SyncStatus, Mode=OneWay}" VerticalAlignment="Center"/>
+        <ContentControl ContentTemplateSelector="{StaticResource TextStatusTemplateSelector}" Content="{x:Bind ViewModel.SelectedSync.SyncStatus, Mode=OneWay}" VerticalAlignment="Center"/>
     </StackPanel>
 </UserControl>
