refactor(viewmodels): replace SyncActivity with SyncActivityViewModel
Refactored the SyncActivity class into SyncActivityViewModel, updating related collections in SyncActivityTable and SyncViewModel. Removed SyncActivity and migrated its properties and methods to the new ViewModel for improved MVVM compliance.

--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/SyncActivityTable.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/SyncActivityTable.xaml
@@ -76,7 +76,7 @@
                     </Style>
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="viewmodels:SyncActivity">
+                    <DataTemplate x:DataType="viewmodels:SyncActivityViewModel">
                         <Grid Padding="16,4,16,4" CornerRadius="8" Loading="Grid_Loading">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="2*"/>
