refactor(navigation): rename nvSample to navView and update the selected item in the NavigationView based on the current frame content.
Updated the NavigationView control name from nvSample to navView in MainWindow.xaml and MainWindow.xaml.cs.
Adjusted event handlers for SelectionChanged and BackRequested to reflect the new name.
Added logic to update the selected item in the NavigationView based on the current frame content.

--- a/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
@@ -91,12 +91,12 @@
         </Border>
 
         <!-- NavigationView -->
-        <NavigationView x:Name="nvSample" 
+        <NavigationView x:Name="navView" 
                         Grid.Row="1"
                         PaneDisplayMode="Left"
-                        SelectionChanged="nvSample_SelectionChanged"
+                        SelectionChanged="navView_SelectionChanged"
                         IsBackEnabled="{x:Bind contentFrame.CanGoBack, Mode=OneWay}"
-                        BackRequested="nvSample_BackRequested"
+                        BackRequested="navView_BackRequested"
                         >
             <NavigationView.Resources>
                 <converters:StringPathToFileNameConverter x:Key="StringPathToFileNameConverter"/>
