--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/SyncActivityTable.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/SyncActivityTable.xaml
@@ -76,7 +76,7 @@
                     </Style>
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="viewmodels:SyncActivityViewModel">
+                    <DataTemplate x:DataType="viewmodels:SyncActivity">
                         <Grid Padding="16,4,16,4" CornerRadius="8" Loading="Grid_Loading">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="2*"/>
