--- a/src/gui4/windows/kDrive client/kDrive client/Pages/ErrorPage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/ErrorPage.xaml
@@ -13,6 +13,7 @@
     mc:Ignorable="d">
     <Page.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <converters:StringPathToFileNameConverter x:Key="StringPathToFileNameConverter"/>
     </Page.Resources>
 
     <Grid Margin="24" RowSpacing="16">
@@ -45,24 +46,22 @@
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
                 <!-- Header -->
-                <Border Background="#EEF1FC" Height="40" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+                <Border Background="#EEF1FC" Height="40" Grid.Row="0">
                     <TextBlock Text="Application" VerticalAlignment="Center" Padding="16" Style="{StaticResource TextBlockStyle}" Foreground="#666666"/>
                 </Border>
 
                 <!-- Content -->
-                <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="16,0,0,0">
+                <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="16,0,0,0">
                     <ImageIcon Height="16" VerticalAlignment="Top" Margin="0,16,0,0">
                         <ImageIcon.Source>
                             <SvgImageSource UriSource="ms-appx:///Assets/Icons/headphones.svg"/>
                         </ImageIcon.Source>
                     </ImageIcon>
-                    <StackPanel Orientation="Vertical" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="16,14,0,0">
+                    <StackPanel Orientation="Vertical" Grid.Row="1" Margin="16,14,0,0">
                         <TextBlock Text="Assistance technique" VerticalAlignment="Center" Style="{StaticResource TextBlockStyle}" Margin="0,0,0,4"/>
                         <TextBlock Text="Veuillez contacter notre support client." VerticalAlignment="Center" Style="{StaticResource CaptionSemiBoldTextBlockStyle}" Margin="0,0,0,2" Foreground="#666666"/>
                         <ListView 
@@ -82,21 +81,60 @@
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="viewmodels_error:AppError">
                                     <TextBlock 
-                                        Text="{x:Bind DescriptionShort, Mode=OneWay}" 
+                                        Text="{x:Bind Cause, Mode=OneWay}" 
                                         TextWrapping="WrapWholeWords" 
                                         Style="{StaticResource CaptionTextBlockStyle}" 
                                         Foreground="#666666"/>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </ListView>
-                        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="0,16,0,16" Spacing="4">
+                        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="0,16,0,16" Spacing="4">
                             <Button Content="Contacter le support" VerticalAlignment="Center"/>
                             <HyperlinkButton Content="En savoir plus" VerticalAlignment="Center" NavigateUri="https://www.infomaniak.com/fr/support/faq/admin2/kdrive"/>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
-                
-                
+            </Grid>
+        </Border>
+
+
+        <!-- Sync errors -->
+        <Border Grid.Row="3" BorderThickness="1" BorderBrush="#E6EAF5" CornerRadius="8" Visibility="{x:Bind ViewModel.SelectedSync.SyncErrors.Count, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <!-- Header -->
+                <Border Background="#EEF1FC" Height="40" Grid.Row="0">
+                    <TextBlock VerticalAlignment="Center" Padding="16" Style="{StaticResource TextBlockStyle}" Foreground="#666666">
+                        <Run Text="Synchronisation ("/>
+                        <Run Text="{x:Bind ViewModel.SelectedSync.Drive.Name, Mode=OneWay}"/>
+                        <Run Text=" - "/>
+                        <Run Text="{x:Bind ViewModel.SelectedSync.LocalPath, Converter={StaticResource StringPathToFileNameConverter}, Mode=OneWay}"/>
+                        <Run Text=")"/>
+                    </TextBlock>
+                </Border>
+
+                <!-- Content -->
+                <ListView ItemsSource="{x:Bind ViewModel.SelectedSync.SyncErrors, Mode=OneWay}" Grid.Row="1" SelectionMode="None">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Margin" Value="4"/>
+                            <Setter Property="Padding" Value="4"/>
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="viewmodels_error:BaseError">
+                            <controls:ErrorItem Error="{x:Bind Mode=OneWay}"/>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </Grid>
         </Border>
     </Grid>
